--- a/app.css
+++ b/app.css
@@ -1,4 +1,25 @@
 body
 {
     background-color: #f9d9d5;
+    font-family: "Nunito", sans-serif;
 }
+
+#mainNavbar{
+    font-size: 2rem;
+    font-weight: 100;
+    
+}
+#mainNavbar .nav-link{
+    color: white;
+}
+#mainNavbar .nav-link:hover{
+    color: #ea1c2c;
+}
+
+#mainNavbar .navbar-brand{
+    color:#ea1c2c;
+    font-size: 1.5rem;
+
+}
+
+
