Added candy-hand container. Added media query to hand-styling.

--- a/app.css
+++ b/app.css
@@ -5,7 +5,7 @@ body
 }
 
 #mainNavbar{
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 100;
     
 }
@@ -19,7 +19,22 @@ body
 #mainNavbar .navbar-brand{
     color:#ea1c2c;
     font-size: 1.5rem;
-
 }
 
 
+#headingGroup span{
+    color:#ea1c2c;
+}
+
+#headingGroup h1{
+    font-weight: 100;
+    font-size: 4rem;
+}
+
+
+@media (max-width:1250px){
+    #headingGroup h1{
+        font-weight: 100;
+        font-size: 3rem;
+    }
+}
