--- a/app.css
+++ b/app.css
@@ -31,6 +31,24 @@ body
     font-size: 4rem;
 }
 
+.blurb h2{
+    color: #ea1c2c;
+    font-weight: 100;
+    font-size: 2.5rem;
+
+}
+
+.blurb p{
+    color: #f948d8;
+    font-weight: 100;
+    font-size: 1.125rem;
+    line-height: 2;
+}
+
+.content{
+    margin-top:100px;
+}
+
 
 @media (max-width:1250px){
     #headingGroup h1{
