--- a/app.css
+++ b/app.css
@@ -47,8 +47,13 @@ body
 
 .content{
     margin-top:100px;
+    margin-bottom: 100px;
 }
 
+.navbar.scrolled{
+    background: rgb(222, 192,222);
+    transition: background 500ms ease-out;
+}
 
 @media (max-width:1250px){
     #headingGroup h1{
